# videodev

./: .gitignore  .pre-commit-config.yaml  README.md  animation_generator.py  pyproject.toml  requirements.txt
.run/: Animation Generator.run.xml
backprop/: loss_function.py
semantic_search/: vector_embeddings.py
